<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/txtTitle"
        android:layout_width="218dp"
        android:layout_height="69dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/txtTitle"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="43dp" />

    <EditText
        android:id="@+id/txtTickets"
        android:layout_width="217dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/txtTickets"
        android:inputType="number"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="97dp"
        tools:layout_editor_absoluteY="135dp" />

    <Spinner
        android:id="@+id/txtGroup"
        android:layout_width="217dp"
        android:layout_height="74dp"
        android:entries="@array/txtGroup"
        android:prompt="@string/prompt"
        android:spinnerMode="dialog"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="201dp" />

    <Button
        android:id="@+id/btnCost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCost"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="303dp" />

    <EditText
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        tools:layout_editor_absoluteX="121dp"
        tools:layout_editor_absoluteY="366dp" />

    <ImageView
        android:id="@+id/imgConcert"
        android:layout_width="350dp"
        android:layout_height="206dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/concert"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="425dp" />
</androidx.constraintlayout.widget.ConstraintLayout>